--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,95 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+h1 {
+	color: orangered;
+	margin-bottom: -5px;
 }
-.text{
-    text-align: center;
+p {
+	margin-bottom: -10px;
 }
-
-
-::placeholder{
-    color: blue;
+.ui {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-table{
-    margin: auto;
-    border-collapse: collapse ;
-    
+.row {
+	display: flex;
 }
-td{
-    width: 100px;
-    height: 100px;
+.cell {
+	border: none;
+	width: 80px;
+	height: 80px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 24px;
+	text-align: center;
+	cursor: pointer;
 }
-.vertical{
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+.cell:active {
+	outline: none;
 }
-.horizontal{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-
-.x {
-  color: blue;
-  font-size: 80px;
+#t1{
+	border-bottom: 1px solid gray;
+	border-right: 1px solid gray;
 }
 
-.o {
-  color: red;
-  font-size: 80px;
+#t2 {
+	border-bottom: 1px solid gray;
+	border-right: 1px solid gray;
+	border-left: 1px solid gray;
 }
-.winO{
-    color: green;
+
+#t3 {
+	border-bottom: 1px solid gray;
+	border-left: 1px solid gray;
 }
-.loss{
-    color: purple;
+
+#t4 {
+	border-top: 1px solid gray;
+	border-bottom: 1px solid gray;
+	border-right: 1px solid gray;
+}
+	
+#t5 {
+	border: 1px solid gray;
+}
+
+#t6 {
+	border-top: 1px solid gray;
+	border-bottom: 1px solid gray;
+	border-left: 1px solid gray;
+}
+
+#t7 {
+	border-top: 1px solid gray;
+	border-right: 1px solid gray;
+}
+
+#t8 {
+	border-top: 1px solid gray;
+	border-right: 1px solid gray;
+	border-left: 1px solid gray;
+}
+
+#t9 {
+	border-top: 1px solid gray;
+	border-left: 1px solid gray;
+}
+
+#rst {
+	box-sizing: border-box;
+	width: 95px;
+	height: 40px;
+	border: 1px solid dodgerblue;
+	margin-left: auto;
+	border-radius: 8px;
+	font-family: Verdana;
+
+	background-color: whitesmoke;
+	color: dodgerblue;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+#main {
+	text-align: center;
 }
